--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -100,7 +100,8 @@
                                             <a class="nav-item nav-link p-15 text" id="nav-profile-tab" data-toggle="tab" role="tab" aria-controls="nav-profile" aria-selected="false" appTelemetryInteract [telemetryInteractEdata]="libraryMenuIntractEdata" [class.active]="router.isActive('/search/Library') || router.isActive('/resources')" routerLink="/resources">Shared Assets</a>
 
                                             <a class="nav-item nav-link p-15 text" id="nav-contact-tab" data-toggle="tab" *ngIf='permissionService.permissionAvailable' appPermission
-                                             [permission]='workSpaceRole'  routerLink="/myassets" [class.active]="router.isActive('/myassets')" role="tab" aria-controls="nav-contact" aria-selected="false"> My Assets</a>
+                                             [permission]='myActivityRole'  routerLink="/myassets" [class.active]="router.isActive('/myassets')" role="tab" aria-controls="nav-contact" aria-selected="false"> My Assets</a>
+
                                              <a class="nav-item nav-link p-15 text" id="nav-contact-tab" data-toggle="tab" *ngIf='permissionService.permissionAvailable' appPermission
                                              [permission]='upForReviewRole'  routerLink="/upForReview" [class.active]="router.isActive('/upForReview')" role="tab" aria-controls="nav-contact" aria-selected="false">Up For Review</a>
                                              
