--- a/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
+++ b/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
@@ -2,8 +2,8 @@
     <!-- <a class="item" appTelemetryInteract [telemetryInteractEdata]="homeMenuIntractEdata" [class.active]="router.isActive('/search/All') || router.isActive('/home')" routerLink="/home">
       {{resourceService?.frmelmnts?.tab?.home}}
     </a> -->
-    <a class="item " routerLink="/about">About</a>
-    <a class="item " routerLink="/collaborators">Collaborators</a>
+    <a class="item " routerLink="/space/about">About</a>
+    <a class="item " routerLink="/space/collaborators">Collaborators</a>
     <!-- <a class="item link" appTelemetryInteract [telemetryInteractEdata]="libraryMenuIntractEdata" routerLink="/contactUs"
     routerLinkActive="active">
       Contact
