--- a/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.css
+++ b/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.css
@@ -33,7 +33,7 @@ p {
   width: 20%;
   padding: 0.5em 1em 0em 1em;
 } */
-.imageRow[_ngcontent-c10] .box[_ngcontent-c10] {
+.box {
   width: 27%;
   padding: 5.5em 1em 0em 1em;
 }
