--- a/src/app/client/src/app/modules/shared/components/space-card/space-card.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-card/space-card.component.html
@@ -27,8 +27,8 @@
         </div>
         <div class="card-body">
           <div class="details">
-          <span class="creator" *ngIf="data?.creators !== 'SPace'">Created By : {{data?.creators | titlecase}}</span>
-          <span class="creator" *ngIf="data?.creators === 'SPace'">Created By : {{data?.creators }}</span>
+          <!-- <span class="creator" *ngIf="data?.creators !== 'SPace'">Created By : {{data?.creators | titlecase}}</span> -->
+          <span class="creator" *ngIf="data?.creators">Created By : {{data?.creators }}</span>
           <span class="creator" *ngIf="data?.link">Link : {{data?.link}}</span>
           <span class="creator" *ngIf="data?.region ">Region(Geography of Re-usability) : {{data?.region | titlecase}}</span>
           <span class="creator" *ngIf="data?.year">Created Year : {{data?.year}}</span>
