--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
@@ -287,6 +287,7 @@
   </div>
   <!-- tarainings attended mobile view ends-->
 </div>
+
 <!--space profile page-->
 <div [appTelemetryImpression]="telemetryImpression" *ngIf="userProfile && slug === 'space'">
   <section class="pt-30 pb-30 d-flex flex-ai-center flex-dc">
@@ -361,38 +362,32 @@
   <extension-point *ngIf="userProfile.badgeAssertions && userProfile.badgeAssertions.length > 0" [name]="'profile-widget'"></extension-point>
   <!-- my badges section ends -->
 
-
-  <div class="profile-bg-c-2 pt-30" *ngIf="attendedTraining && attendedTraining.length > 0">
+ 
+  <div class="profile-bg-c-2 pt-30">
     <div class="ui container">
       <!--contributions view starts-->
-      <!-- <div class="fs-1-7 font-w-bold pl-20 mobile only" *ngIf="contributions && contributions.length > 0">{{resourceService.frmelmnts.scttl.contributions}}
+      <div class="fs-1-7 font-w-bold pl-20 mobile only" *ngIf="contributions && contributions.length > 0">
+        {{resourceService.frmelmnts.scttl.contributions}}
         ({{contributions.length}})&#x200E;</div>
-      <div class="ui divider my-5 mobile only"></div> -->
+      <div class="ui divider my-5 mobile only"></div>
       <!--contributions computer view starts-->
-      <!-- <div class="ui segments" *ngIf="contributions && contributions.length > 0">
+      <div class="ui segments" *ngIf="contributions && contributions.length > 0">
         <div class="ui segment computer only">
-          <div class="fs-1-7 pl-10 font-w-bold">{{resourceService.frmelmnts.scttl.contributions}} ({{contributions.length}})&#x200E;</div>
+          <div class="fs-1-7 pl-10 font-w-bold">{{resourceService.frmelmnts.scttl.contributions}}
+            ({{contributions.length}})&#x200E;</div>
         </div>
-
         <div class="ui segment">
           <div class="regular slider pt-10">
-            <ngx-slick  in-view-container [throttle]="[1000]" [trigger]="item" class="carousel" #slickModal="slick-modal"
-            [config]="slideConfig" (afterChange)="onTelemetryEvent(contributions,$event)"
-              (beforeChange)="beforeContributionSlideChange($event)">
-              <div in-view-item  ngxSlickItem *ngFor="let item of contributions;let i = index;" [id]="i" [data]="item" class="slide">
-                <div>
-                  <app-space-card (clickEvent)="onClickOfMyContributions($event)" [slug]="slug" [data]="item" [customClass]="'pr-20'" class="pr-20 d-block"></app-space-card>
-                </div>
-              </div>
-            </ngx-slick>
+            <app-page-section [section]="{ contents: contributions}" (visits)="prepareVisits($event)"
+              (playEvent)="openContent($event)" [slug]= "slug"></app-page-section>
           </div>
         </div>
-      </div> -->
+      </div>
       <!--contributions computer view ends-->
       <!--contributions view ends-->
-
       <!-- tarainings attended computer view strats-->
-      <table class="ui basic table profile-bg-c-1 mt-20 mb-30 computer only" >
+      <table class="ui basic table profile-bg-c-1 mt-20 mb-30 computer only"
+        *ngIf="attendedTraining && attendedTraining.length">
         <thead>
           <tr>
             <th colspan="2" class="fs-1-7 pl-30">{{resourceService.frmelmnts.lbl.trainingAttended}}
@@ -402,15 +397,22 @@
         <tbody>
           <tr>
             <ul class="pl-30 pr-30">
-              <li class="d-flex flex-jc-space-between mb-20" *ngFor="let data of attendedTraining | slice:0:courseLimit">
-                <span class="fs-1-16 color-3">{{data.courseName}}</span>
+              <li class="d-flex flex-jc-space-between mb-20"
+                *ngFor="let data of attendedTraining | slice:0:courseLimit">
+                <span class="fs-1-16 sb-text-gray-800">{{data.courseName}}</span>
                 <span class="fs-1 color-4" *ngIf="data.completedOn">{{data.completedOn | date :'MMMM yyy' }}</span>
               </li>
               <div class=" mb-15 d-flex flex-jc-center relative" *ngIf="attendedTraining.length > 3">
-                <button class="ui semi-circular dodger-blue button" *ngIf="showMoreTrainings" (click)="toggleCourse(true)">{{resourceService.frmelmnts.lbl.viewmore}}
+                <button appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
+                  [telemetryInteractEdata]="{id:'view-more' , type:'click' , pageid:'profile-read'}"
+                  class="ui semi-circular dodger-blue button" *ngIf="showMoreTrainings"
+                  (click)="toggleCourse(true)">{{resourceService.frmelmnts.lbl.viewmore}}
                   <i class="chevron down icon pl-10"></i>
                 </button>
-                <button class="ui semi-circular dodger-blue button" (click)="toggleCourse(false)" *ngIf="!showMoreTrainings">{{resourceService.frmelmnts.lbl.viewless}}
+                <button appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
+                  [telemetryInteractEdata]="{id:'view-less' , type:'click' , pageid:'profile-read'}"
+                  class="ui semi-circular dodger-blue button" (click)="toggleCourse(false)"
+                  *ngIf="!showMoreTrainings">{{resourceService.frmelmnts.lbl.viewless}}
                   <i class="chevron up icon pl-10"></i>
                 </button>
               </div>
