--- a/src/app/tenant/sunbirdorg/index.html
+++ b/src/app/tenant/sunbirdorg/index.html
@@ -115,7 +115,7 @@
 								<img src="img/docs_images/developer-docs.png">
 							</a>
 							<div class="caption">
-								<a href="/explore/1?assetType=Knowledge&appliedFilters=true" class="homepage-section">
+								<a href="/sunbirdorg/explore/1?assetType=Knowledge&appliedFilters=true" class="homepage-section">
 									<h5 class="homepage-section__title">Knowledge Resources <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i></h5>
 								</a>
 							</div>
