--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -49,7 +49,7 @@
             <p class="card-text">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
             <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'application/pdf'">
                 <p>
-                    File : <span routerLink="view" class="pdfStyle">{{pdfs | titlecase | slice: 1}}pdf</span>
+                    File : <span (click)="navigateToView()" class="pdfStyle">{{pdfs | titlecase | slice: 1}}pdf</span>
                 </p>
 
             </div>
