deployment error fixed

--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -45,7 +45,7 @@
             </p>
             <p class="card-text" *ngIf="assetDetail?.description">Description : {{assetDetail?.description | titlecase}}</p>
             <p class="card-text" *ngIf="assetDetail?.link">Link: <a href="{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}}</a></p>
-            <p class="card-text">Submitted By : {{assetDetail?.creator}}</p>
+            <p class="card-text">Submitted By : {{assetDetail?.creators}}</p>
             <p class="card-text">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
             <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'application/pdf'">
                 <p>
