explore card icon issue fixed

--- a/src/app/client/src/app/modules/core/components/main-menu/main-menu.component.html
+++ b/src/app/client/src/app/modules/core/components/main-menu/main-menu.component.html
@@ -32,14 +32,14 @@
 			{{resourceService.frmelmnts?.lbl?.explore}} {{resourceService.instance}}
 		</button>
 		<a class="item"
-			[class.active]="router.isActive('/search/explore') || router.isActive(slug ? slug + '/explore-library' : '/explore-library')"
-			*ngIf="!router.isActive('', true)" [routerLink]="[slug ? slug + '/explore-library' : '/explore-library']"
+			[class.active]="router.isActive('/search/explore') || router.isActive('/sbwb/explore-library')"
+			*ngIf="!router.isActive('', true)" [routerLink]="['/sbwb/explore-library']"
 			appTelemetryInteract [telemetryInteractEdata]="libraryMenuIntractEdata">
 			{{resourceService?.frmelmnts?.tab?.resources}}
 		</a>
 		<a class="item"
-			[class.active]="router.isActive('/search/explore-course') || router.isActive(slug ? slug + '/explore-courses' : '/explore-courses')"
-			*ngIf="!router.isActive('', true)" [routerLink]="[slug ? slug + '/explore-courses' : '/explore-courses']"
+			[class.active]="router.isActive('/search/explore-course') || router.isActive('/sbwb/explore-courses')"
+			*ngIf="!router.isActive('', true)" [routerLink]="['/sbwb/explore-courses']"
 			appTelemetryInteract [telemetryInteractEdata]="learnMenuIntractEdata">
 			{{resourceService?.frmelmnts?.tab?.courses}}
 		</a>
