--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -95,7 +95,7 @@
                                 <div class="col-xs-12 ">
                                     <nav>
                                         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                                            <a class="nav-item nav-link p-15 text" id="nav-home-tab" data-toggle="tab" routerLink="/home" [class.active]="router.isActive('/home')"
+                                            <a class="nav-item nav-link p-15 text" id="nav-home-tab" data-toggle="tab" routerLink="/home/spacehome" [class.active]="router.isActive('/home/spacehome')"
                                             role="tab" aria-controls="nav-home"  aria-selected="true">Home</a>
                                             <a class="nav-item nav-link p-15 text" id="nav-profile-tab" data-toggle="tab" role="tab" aria-controls="nav-profile" aria-selected="false" appTelemetryInteract [telemetryInteractEdata]="libraryMenuIntractEdata" [class.active]="router.isActive('/search/Library') || router.isActive('/resources')" routerLink="/resources">Shared Assets</a>
 
