--- a/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.html
+++ b/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.html
@@ -43,7 +43,7 @@
     (dismissed)="showLoginModal = false" #modal >
     <div class="sb-modal-content">
       <div class="ui center aligned segment">
-        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <button type="button" class="close" aria-label="Close" (click)="close()">
           <span aria-hidden="true" class="close mr-10 mb-10">&times;</span>
         </button>
         <div class="listContainer">
