--- a/src/app/client/src/app/modules/search/components/org-filter/org-filter.component.html
+++ b/src/app/client/src/app/modules/search/components/org-filter/org-filter.component.html
@@ -26,7 +26,7 @@
               </div>
               <div class="two wide column">
                 <sui-multi-select class="selection ui filtersearch" [(ngModel)]="queryParams.OrgType" labelField="orgType.name"
-                  [options]="options" [hasLabels]=false  defaultSelectionText="Org Type" zeroSelectionText="Select" #multiSelect>
+                  [options]="options" [hasLabels]=false   #multiSelect>
                   <sui-select-option *ngFor="let orgType of searchOrgType" [value]="orgType"> </sui-select-option>
                 </sui-multi-select>
               </div>
