--- a/src/app/client/src/app/modules/dashboard/components/data-chart/data-chart.component.html
+++ b/src/app/client/src/app/modules/dashboard/components/data-chart/data-chart.component.html
@@ -34,6 +34,7 @@
 
               <ng-container *ngIf="showLabelsFilter">
                 <div class="field">
+                  <div class="multiselectlabel">{{field.label}}</div>
                   <sui-multi-select class="selection"
                     [placeholder]="resourceService?.frmelmnts?.lbl?.Select + ' ' + labelString"
                     formControlName="labels">
@@ -44,6 +45,7 @@
               </ng-container>
 
               <div class="field" *ngIf="chart.datasets.length>1">
+                <div class="multiselectlabel">{{field.label}}</div>
                 <sui-multi-select class="selection" [placeholder]="resourceService?.frmelmnts?.lbl?.Select +  ' Chart'"
                   [options]="chart.datasets" labelField="label" formControlName="dataSet" #multiSelect>
                   <sui-select-option *ngFor="let option of multiSelect.filteredOptions" [value]="option">
