added polyfills for web animation

--- a/src/app/client/src/index.html
+++ b/src/app/client/src/index.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Montserrat%7CMuli%7COpen+Sans%7CRoboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
@@ -74,11 +76,11 @@
   <input type="hidden" id="reportsLocation" value="<%=reportsLocation%>" />
   <% } %>
   <% if (previewCdnUrl) { %>
-    <input type="hidden" id="previewCdnUrl" value="<%=previewCdnUrl%>" />
-    <% } %>
-    <% if (cdnWorking) { %>
-      <input type="hidden" id="cdnWorking" value="<%=cdnWorking%>" />
-      <% } %>
+  <input type="hidden" id="previewCdnUrl" value="<%=previewCdnUrl%>" />
+  <% } %>
+  <% if (cdnWorking) { %>
+  <input type="hidden" id="cdnWorking" value="<%=cdnWorking%>" />
+  <% } %>
   <app-root></app-root>
 </body>
 
