--- a/src/app/tenant/sunbirdorg/partners.html
+++ b/src/app/tenant/sunbirdorg/partners.html
@@ -120,16 +120,16 @@
 
           <div class="partnerContainerBody">
             <div class="row imageRow">
-              <div class="box"><img src="./img/partner_logos/NIIT.png" class="p-0"></div>
-              <div class="box"><img src="./img/partner_logos/Central_Square_Foundation_Logo.png"></div>
-              <div class="box"><img src="./img/partner_logos/EY-logo-horizontal.png"></div>
-              <div class="box"><img src="./img/partner_logos/Education.jpg"></div>
-              <div class="box"><img src="./img/partner_logos/sikshalokam.png"></div>
-              <div class="box"><img src="./img/partner_logos/Tarento.png" class="p-0"></div>
-              <div class="box"><img src="./img/partner_logos/Akshara.png"></div>
-              <div class="box"><img src="./img/partner_logos/pwc-logo.jpg"></div>
-              <div class="box"><img src="./img/partner_logos/eDreams.jpg"></div>
-              <div class="box"><img src="./img/partner_logos/infosys-logo-1.png"></div>
+              <div class="box"><img src="img/partner_logos/NIIT.png" class="p-0"></div>
+              <div class="box"><img src="img/partner_logos/Central_Square_Foundation_Logo.png"></div>
+              <div class="box"><img src="img/partner_logos/EY-logo-horizontal.png"></div>
+              <div class="box"><img src="img/partner_logos/Education.jpg"></div>
+              <div class="box"><img src="img/partner_logos/sikshalokam.png"></div>
+              <div class="box"><img src="img/partner_logos/Tarento.png" class="p-0"></div>
+              <div class="box"><img src="img/partner_logos/Akshara.png"></div>
+              <div class="box"><img src="img/partner_logos/pwc-logo.jpg"></div>
+              <div class="box"><img src="img/partner_logos/eDreams.jpg"></div>
+              <div class="box"><img src="img/partner_logos/infosys-logo-1.png"></div>
             </div>
           </div>
           <div class="allContributions">
