--- a/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.html
+++ b/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.html
@@ -11,7 +11,8 @@
         <div class="six wide computer eleven wide mobile column">
           <!--Logo-->
           <a class="d-flex logo" tabindex="0" title="{{tenantInfo.titleName}}" role="banner" (click)="navigateToHome()">
-            <img class="cursor-pointer" alt={{tenantInfo.titleName}} src="../../../../../assets/images/sunbird_logo2.png">
+            <img class="cursor-pointer" alt={{tenantInfo.titleName}}
+              src="../../../../../assets/images/sunbird_logo2.png">
           </a>
           <!--/Logo-->
         </div>
@@ -25,10 +26,10 @@
           <div class="d-flex computer only ml-auto">
             <div class="ui text menu m-0 d-flex flex-jc-center flex-ai-center computer only mt-15">
 
-              <a href="/sunbird/about-sunbird" class="  item color">About Sunbird</a>
-              <a href="/sunbird/explore/1" class="item color"
+              <a href="/sunbirdorg/about-sunbird" class="  item color">About Sunbird</a>
+              <a href="/sunbirdorg/explore/1" class="item color"
                 [class.active]="router.isActive('/explore/1', false)">Resources</a>
-              <a href="/sunbird/partners-sunbird" class="item color">Collaborators</a>
+              <a href="/sunbirdorg/partners-sunbird" class="item color">Collaborators</a>
             </div>
           </div>
           <div class="d-flex mobile only ml-auto">
