--- a/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.html
+++ b/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.html
@@ -35,9 +35,9 @@
           <div class="d-flex mobile only ml-auto">
             <div class="ui sidebar right vertical menu bgcolour align pr-10">
               <ng-container *ngIf="!userService.loggedIn && !isOffline">
-                <a href="/sunbird/about-sunbird" class="item color">About Sunbird</a>
-                <a href="/sunbird/explore/1" class="item color">Resources</a>
-                <a href="/sunbird/partners-sunbird" class="item color">Collaborators</a>
+                <a href="/sunbirdorg/about-sunbird" class="item color">About Sunbird</a>
+                <a href="/sunbirdorg/explore/1" class="item color">Resources</a>
+                <a href="/sunbirdorg/partners-sunbird" class="item color">Collaborators</a>
               </ng-container>
             </div>
           </div>
