--- a/src/app/client/src/app/modules/public/module/library-content/components/explore-library/explore-library.component.html
+++ b/src/app/client/src/app/modules/public/module/library-content/components/explore-library/explore-library.component.html
@@ -12,7 +12,20 @@
                       interpolate:'{searchString}':this.queryParams.key}}
                   </p>
               </div>
+              <div class="ui right floated header">
+                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/sbwb/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
+            </div>
           </div>
+          <div class="ui clearing segment content-player-header search-content-header" *ngIf="!showLoader && contentList.length === 0">
+            <div class="ui left floated header">
+                <p class="serch-allresult">{{resourceService.frmelmnts?.lbl?.showingResultsFor |
+                    interpolate:'{searchString}':this.queryParams.key}}
+                </p>
+            </div>
+            <div class="ui right floated header">
+                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/sbwb/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
+            </div>
+        </div>
       </div>
       <div [appTelemetryImpression]="telemetryImpression" class="twelve wide column" in-view-container (inview)="inView($event)" *ngIf="!showLoader && contentList.length">
           <div class="masonry-grid dynamic-section-card">
