--- a/src/app/client/src/app/modules/search/components/space-resource-search/space-resource-search.component.html
+++ b/src/app/client/src/app/modules/search/components/space-resource-search/space-resource-search.component.html
@@ -48,7 +48,7 @@
           </div>
           <div in-view-container (inview)="inview($event)" [throttle]="[1000]" [trigger]="contentList"
               *ngIf="!showLoader && contentList.length" class="ui stackable row dynamic-section-card ">
-              <div in-view-item [id]="i" [data]="content" class="column py-5 pl-10"
+              <div in-view-item [id]="i" [data]="content" class="column pl-10"
                   *ngFor="let content of contentList;let i = index;">
                   <app-space-card appTelemetryInteract [telemetryInteractEdata]="cardIntractEdata" [slug]= "slugInfo"
                       [telemetryInteractObject]="{id:content.metaData.identifier,type:content.metaData.contentType || 'content',ver:'1.0'}"
