upforReview routing issue fixed

--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.scss
@@ -298,3 +298,10 @@ background: #007b5e;
 .col-8[_ngcontent-c3] {
   max-width: 69.666667% !important;
 }
+.ui.right.sidebar[_ngcontent-c3] {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  width: 20rem;
+  height: auto !important;
+}
