--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -53,7 +53,9 @@
         </a>
     </div>
         <ng-template #showLoginBtn>
-                <i class="large bars icon link primary-color col-12 mobile only" (click)="showSideBar()" tabindex="0"></i>
+               <div class="col mobile only">
+                    <i class="large bars icon link primary-color mobile only float-right mr-30" (click)="showSideBar()" tabindex="0"></i>
+               </div>
                 <div class="col computer only">
                 <div class="primary-nav-item d-flex ml-auto pr-30 col-8">
                   
@@ -75,12 +77,12 @@
                                 <a (click)="gotoContact('about')" class="item" id="a" >About</a>
                                 <a (click)="gotoContact('assets')" class="item" id="a" >Assets</a>
                                 <a  class="item" id="a" (click)="gotoContact('collaborators')">Collaborators</a>
-                                <a  class="item" id="a" (click)="gotoContact('contact')">Contact</a>
+                                <!-- <a  class="item" id="a" (click)="gotoContact('contact')">Contact</a> -->
                                 <!-- <button class="ui green1 button" routerLink="[/resources]" id="a">{{resourceService.frmelmnts?.btn?.signin}}</button> -->
                                 <!-- <a (click)="navigateToHome()" class="item ml-auto mr-10" >
                                   Home
                                 </a> -->
-                                <a href="/resources" class="sunblogin item font-weight-bold btn btn-purple ml-auto" id="ab">
+                                <a href="/resources" class="sunblogin item font-weight-bold btn btn-purple  " id="ab">
                                     {{resourceService.frmelmnts?.btn?.signin}}
                                 </a>
         </div>
@@ -95,7 +97,7 @@
                                 <div class="col-xs-12 ">
                                     <nav>
                                         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                                            <a class="nav-item nav-link p-15 text" id="nav-home-tab" data-toggle="tab" routerLink="/home/spacehome" [class.active]="router.isActive('/home/spacehome')"
+                                            <a class="nav-item nav-link p-15 text" id="nav-home-tab" data-toggle="tab" routerLink="/spacehome" [class.active]="router.isActive('/spacehome')"
                                             role="tab" aria-controls="nav-home"  aria-selected="true">Home</a>
                                             <a class="nav-item nav-link p-15 text" id="nav-profile-tab" data-toggle="tab" role="tab" aria-controls="nav-profile" aria-selected="false" appTelemetryInteract [telemetryInteractEdata]="libraryMenuIntractEdata" [class.active]="router.isActive('/search/sharedAssets') || router.isActive('/resources')" routerLink="/resources">Shared Assets</a>
 
