--- a/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.html
+++ b/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.html
@@ -39,14 +39,9 @@
           </h3>
         </div>
 
-        <div class="allContributions container">
-          <h3 class="contributionText">
-            To view a list of all our collaborators, click <span> <a class="item " (click)="openmodal()">here</a></span>
-          </h3>
-        </div>
 
         <div *ngIf="modalopen">
-          <sui-modal [mustScroll]="false" [isClosable]="false" [transitionDuration]="0" [size]="'small'"
+          <sui-modal [mustScroll]="false" [isClosable]="false" [transitionDuration]="0" [size]="'large'"
             class="sb-modal" (dismissed)="showLoginModal = false" #modal>
             <div class="sb-modal-content">
               <div class="ui center aligned segment">
