--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -78,11 +78,13 @@
 									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/space_logo.png" alt="sunbird.ins"></a>
 								</span>
 							</div>
-					<div class="col-lg-5">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<i class="fa fa-bars fa-2x"></i>
-						</button>
+							<div class="col navbar-toggle collapsed">
+									<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#menu" aria-expanded="false">
+											<span class="sr-only">Toggle navigation</span>
+											<i class="fa fa-bars fa-2x"></i>
+										</button>
+							</div>
+					<div class="col-lg-6">
 					<nav class="navbar-collapse  navbar-right collapse" id="menu" aria-expanded="false" style="height: 1px;">
 							<div class=" ml-auto computer only pr-30 ">
 								<a class="menuItem" onclick="gotoContact('about')">About</a>
@@ -90,19 +92,18 @@
 								<a class="menuItem" onclick="gotoContact('collaborators')">Collaborators</a>
 								<!-- <a class="menuItem" id="a" onclick="gotoContact('contactUs')">Contact</a> -->
 								<!-- <a class="menuItem" id="a" href="/contactUs">Contact</a> -->
-								
+								<a class="col-lg-push-12 sunblogin menuItem font-weight-bold ml-auto btn btn-purple" href="/resources" id="ab">
+									Sign In </a>
 						</div></nav>
 					</div>
 				
 				
 		
-					<div class="col-lg-offset-3">
+					<!-- <div class="col-lg-offset-3">
 					<a class="sunblogin menuItem font-weight-bold ml-auto btn btn-purple" href="/resources" id="ab">
 									Sign In </a>
-					</div>
-					<!-- <div class="col-lg-offset-3">
-							<a class="sunblogin menuItem font-weight-bold ml-auto btn btn-purple" href="/resources" id="ab">
-								Sign In </a></div> -->
+					</div> -->
+			
 					</div>
 		</div>
 		<div class="container">
