new Requirements added ,bugs fixed

--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -5,9 +5,9 @@
     <div class="ui primary-header p-10">
 
         <div role="banner" class="ui logo d-flex flex-ai-center row">
-            <div class="col-2">
-                    <a class="flex-ai-center" (click)="navigateToHome()">
-                            <img class="image centered cursor-pointer ml-10" alt={{tenantName}} src="../../../../../assets/images/space_logo.png">
+            <div class="ml-10">
+                    <a class="flex-ai-center cursor-pointer" (click)="navigateToHome()">
+                            <img class="image centered  ml-10" alt={{tenantName}} src="../../../../../assets/images/space_logo.png">
                         </a>
             </div>
             <div class="" *ngIf="slug !=='space'">
@@ -54,10 +54,10 @@
     </div>
         <ng-template #showLoginBtn>
                <div class="col mobile only">
-                    <i class="large bars icon link primary-color mobile only float-right mr-30" (click)="showSideBar()" tabindex="0"></i>
+                    <i class="large bars icon link primary-color mobile only float-right" (click)="showSideBar()" tabindex="0"></i>
                </div>
                 <div class="col computer only">
-                <div class="primary-nav-item d-flex ml-auto pr-30 col-8">
+                <div class="primary-nav-item d-flex ml-auto pr-30 col-lg-9">
                   
                         <a (click)="gotoContact('about')" class="item" id="a" >About</a>
                         <a (click)="gotoContact('assets')" class="item" id="a" >Assets</a>
