--- a/src/app/client/src/app/modules/public/components/about-us/about-us.component.css
+++ b/src/app/client/src/app/modules/public/components/about-us/about-us.component.css
@@ -74,6 +74,9 @@ p {
     text-align: center;
     font-family: 'Muli', sans-serif;
   }
+  a:hover {
+    text-decoration: none;
+  }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
     background-size: cover;
