--- a/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
+++ b/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
@@ -58,7 +58,7 @@
 			technology, processes, methods and domains. These resources can be reused to create solutions in different
 			contexts.</p>
 		<p class="text pb-15">SPace is the outcome of collective efforts of practitioners of Societal Platform approach.
-			Learn more about Societal Platform Thinking.</p>
+		<a href="https://societalplatform.org/" target="_blank">Learn more about Societal Platform Thinking.</a></p>
 		<p class="text pb-15">We welcome contributions from different partners from Samaaj, Sarkaar and Bazaar. If you
 			would like to share your resources on SPace, please write to us at space@societalplatform.org</p>
 	</div>
