--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -14,9 +14,9 @@
     <div in-view-item *ngFor="let content of allContent;let i = index;" [id]="i" [data]="content"
       class="col-md-4 py-3 pl-10">
       <div *ngIf="content">
-        <div class="card mb-5">
+        <div class="card mb-5"  (click)="navigateToDetailsPage(content?.identifier, content?.status)">
 
-          <div class="card-header" (click)="navigateToDetailsPage(content?.identifier, content?.status)">
+          <div class="card-header">
             <div class="row">
                 <div class="thick-gray-border sprite knowledgeimg" *ngIf="content?.board === 'Knowledge'">
                   </div>
@@ -42,12 +42,12 @@
           <div class="card-body">
              <!-- <div> <i class="far fa-heart float-right"></i></div> -->
              <p class="creator mb-0">Created By : {{content?.creators}}</p>
-             <p class="creator mb-0">Region(Geography of Re-usability) : {{content?.region}}</p>
+             <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
              <p class="creator mb-0"> Created Year: {{content?.year}}</p>
              <p class="creator mb-0" *ngIf="content?.link">Link : {{content?.link}}</p>
             <div class="card-text1">{{content?.description | titlecase | slice:0:60}}<span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center mt-30">
               <button *ngIf="(content?.status==='Draft' || content?.status=== 'DRAFT' || content?.status=== 'LIVE' || content?.status=== 'Live') && route.isActive('myassets')" type="button" class="btn text-secondary" id="style"
                 (click)="deleteConfirmModal(content.identifier); $event.stopPropagation()">
                 <i class="trash large icon"></i>
