--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -61,6 +61,7 @@ i.fas.fa-database.fa-lg {
    height: auto;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   font-family: 'Muli', sans-serif;
+  cursor: pointer;
  }
  .col-sm-8 {
    height: fit-content;
