--- a/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.html
+++ b/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.html
@@ -11,9 +11,7 @@
     </div>
   </div>
   <p class="container partnerBody">
-      Institutions and organisations who have joined forces to create digital learning resources, develop,
-      extend,
-      implement, use or manage programs leveraging Sunbird's digital learning infrastructure
+    Organizations and institutions who are practitioners of Societal Platform approach and contributing assets for public use.
     </p>
   <div class="container container-fluid partnerContainer">
     <div class="partnerContainerBody">
@@ -25,7 +23,7 @@
         <div class="box"><a href="https://avantifinance.in/" target="_blank"><img src="../../../../../assets/space/avanti.png"></a></div>
         <div class="box"><a href=" https://www.egovernments.org/" target="_blank"><img src="../../../../../assets/space/egov.png" class="p-0"></a></div>
       </div>
-      <div class="box1 text-center mt-90"><a href="https://www.socion.io/" target="_blank"><p class="socion" style="font-size: 55px;">Socion</p></a></div>
+      <div class="box1 text-center mt-90"><a href="https://www.socion.io/" target="_blank"><img src="../../../../../assets/space/Socion.png" class="p-0"></a></div>
     </div>
     <!-- <div class="allContributions">
       <h3 class="contributionText">
