--- a/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
@@ -58,6 +58,7 @@ background-color: #585858;
    width: 350px;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
    font-family: 'Muli', sans-serif;
+   cursor: pointer;
  }
  .card-header {
    cursor: pointer;
